--- a/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/frondalize-homepage.css
+++ b/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/frondalize-homepage.css
@@ -17,14 +17,40 @@
   transition: ease-in-out 0.2s;
 }
 
+#header {
+  background: linear-gradient(to right, rgb(64, 0, 255), rgb(0, 64, 255));
+  display: flex;
+  justify-content: center;
+}
 #header .header {
   border: 1px solid maroon;
+  background-color: white;
   box-sizing: border-box;
-  width: 100%;
+  width: 80%;
   height: 60px;
   display: flex;
   justify-content: center;
-  background: linear-gradient(to right, rgb(64, 0, 255), rgb(0, 64, 255));
+}
+#header .header__visualmodes {
+  width: 6%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#header .header__visualmodes--circle {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+}
+#header .header__visualmodes--circle .fa-sun {
+  scale: 2;
+}
+#header .header__visualmodes--circle .fa-moon {
+  scale: 2;
 }
 #header .header__logo {
   box-sizing: border-box;
@@ -32,6 +58,7 @@
   filter: invert(0);
   cursor: pointer;
   height: 100%;
+  transition: ease-in-out 0.2s;
 }
 #header .header__logo--image {
   width: 100%;
@@ -43,22 +70,22 @@
   width: 34%;
   position: relative;
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 #header .header__search--bar {
   position: relative;
   border: 1px solid rgb(128, 0, 255);
   border-radius: 5px;
-  width: 80%;
-  height: 30px;
+  width: 90%;
+  height: 36px;
   outline: none;
   padding-left: 5%;
 }
 #header .header__search--find {
   position: absolute;
   top: 50%;
-  left: 85%;
+  left: 90%;
   transform: translate(-50%, -50%);
   cursor: pointer;
   width: 28px;
@@ -69,41 +96,227 @@
   color: rgb(8, 8, 8);
 }
 #header .header__userpanel {
-  width: 30%;
+  width: 34%;
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  position: relative;
+}
+#header .header__userpanel .fa-1x {
+  padding-right: 5px;
+}
+#header .header__userpanel--dropdown {
+  z-index: 2;
+  position: absolute;
+  width: 160px;
+  height: 100px;
+  border: 1px solid red;
+  background-color: white;
+  top: 100%;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 20px;
+}
+#header .header__userpanel--dropdown-login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  width: 60%;
+  height: 30px;
+  border: 1px solid red;
+  background-color: white;
+  transition: ease-in-out 0.2s;
+}
+#header .header__userpanel--dropdown-login:hover {
+  filter: drop-shadow(0px 0px 5px rgb(0, 0, 0));
+  scale: 1.01;
+  transition: ease-in-out 0.2s;
+}
+#header .header__userpanel a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  height: 100%;
+}
+#header .header__langbar {
+  width: 8%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#header .header__langbar .fa-globe {
+  margin-right: 5px;
+}
+#header .header__langbar--selector {
+  width: 50px;
+  outline: none;
+  border-top: none;
+  border-left: none;
+  border-right: none;
+  border-bottom: 1px solid black;
+  background-color: transparent;
+  color: black;
+  padding-left: 4px;
 }
 
+#nav {
+  background: greenyellow;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 #nav .nav {
   border: 1px solid gray;
+  background-color: white;
   box-sizing: border-box;
-  width: 100%;
+  width: 80%;
   height: 40px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#nav .nav__list {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  height: 100%;
+}
+#nav .nav__list--menus {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  height: 100%;
+  padding: 0px 20px;
+}
+#nav .nav__dropdown-woman {
+  position: absolute;
+  top: 100%;
+  left: 3%;
+  width: 800px;
+  height: 400px;
+  border: 1px solid red;
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  padding: 50px 0;
+}
+#nav .nav__dropdown-man {
+  position: absolute;
+  top: 100%;
+  left: 15%;
+  width: 840px;
+  height: 400px;
+  border: 1px solid red;
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  padding: 50px 0;
+}
+#nav .nav__dropdown-kid {
+  position: absolute;
+  top: 100%;
+  left: 25%;
+  width: 650px;
+  height: 400px;
+  border: 1px solid red;
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  padding: 50px 0;
+}
+#nav .nav__dropdown-accessories {
+  position: absolute;
+  top: 100%;
+  left: 30%;
+  width: 700px;
+  height: 400px;
+  border: 1px solid red;
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  padding: 50px 0;
+}
+#nav .nav__dropdown-electronics {
+  position: absolute;
+  top: 100%;
+  left: 40%;
+  width: 680px;
+  height: 400px;
+  border: 1px solid red;
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  padding: 50px 0;
+}
+#nav .nav__dropdown-sport {
+  position: absolute;
+  top: 100%;
+  left: 50%;
+  width: 500px;
+  height: 400px;
+  border: 1px solid red;
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  padding: 50px 0;
+}
+#nav .nav__dropdown-furniture {
+  position: absolute;
+  top: 100%;
+  left: 55%;
+  width: 500px;
+  height: 400px;
+  border: 1px solid red;
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  padding: 50px 0;
+}
+#nav .nav__dropdown-software {
+  position: absolute;
+  top: 100%;
+  left: 62%;
+  width: 400px;
+  height: 400px;
+  border: 1px solid red;
+  background-color: white;
+  display: flex;
+  justify-content: space-around;
+  padding: 50px 0;
 }
 
 #footer {
-  box-sizing: border-box;
-  border: 1px solid royalblue;
-  background-color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: orange;
 }
 #footer .footer {
   box-sizing: border-box;
-  width: 100%;
+  width: 80%;
   height: 220px;
+  border: 1px solid red;
+  background-color: white;
   display: flex;
   justify-content: center;
 }
 #footer .footer__columns {
-  width: 16%;
+  width: 20%;
 }
 #footer .footer__columns--logo {
-  position: relative;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 80%;
-  height: auto;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 #footer .footer__columns--headers {
   font-size: 24px;
@@ -127,25 +340,26 @@
 }
 #footer .bottom {
   box-sizing: border-box;
-  width: 100%;
+  width: 80%;
   height: 30px;
   border: 1px solid blueviolet;
+  background-color: white;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: space-evenly;
   font-size: 14px;
   font-weight: 500;
 }
 #footer .bottom__rights {
-  width: 40%;
+  width: 60%;
 }
 #footer .bottom__conditions {
-  width: 40%;
+  width: 30%;
   display: flex;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-between;
 }
 
 .hidden {
-  display: none;
+  display: none !important;
 }/*# sourceMappingURL=frondalize-homepage.css.map */
