--- a/03 ■► JS DOM/tasks/2023 → 03 → 06/01 ► video player.scss
+++ b/03 ■► JS DOM/tasks/2023 → 03 → 06/01 ► video player.scss
@@ -73,7 +73,7 @@ body {
             border-radius: 50%;
             width: 10px;
             height: 10px;
-            position: relative;
+            position: absolute;
             top: -50%;
             left: 0%;
             transform: translateX(-50%);
