--- a/03 ■► JS DOM/tasks/2023 → 03 → 06/01 ► video player.css
+++ b/03 ■► JS DOM/tasks/2023 → 03 → 06/01 ► video player.css
@@ -76,6 +76,78 @@ body {
   opacity: 0;
   cursor: pointer;
 }
+.videoplayer__touchbuttons {
+  z-index: 6;
+  position: absolute;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+}
+.videoplayer__touchbuttons--backward {
+  position: absolute;
+  top: 0;
+  left: 100%;
+  transform: translateX(-100%);
+  width: 150px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 100px;
+  border: none;
+  color: rgb(16, 16, 16);
+  opacity: 0.35;
+}
+.videoplayer__touchbuttons--forward {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(0%);
+  width: 150px;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 100px;
+  border: none;
+  color: rgb(16, 16, 16);
+  opacity: 0.35;
+}
+.videoplayer__touchbuttons--pause {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 150px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 120px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: none;
+  color: rgb(255, 255, 255);
+  opacity: 0.45;
+}
+.videoplayer__touchbuttons--play {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 150px;
+  height: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 120px;
+  background-color: transparent;
+  border-radius: 50%;
+  border: none;
+  color: rgb(255, 255, 255);
+  opacity: 0.45;
+  transition: linear 0.1s;
+}
 
 .toolbar {
   z-index: 1;
@@ -191,7 +263,7 @@ body {
   height: 20px;
   width: 12%;
   position: absolute;
-  left: 70%;
+  left: 65%;
 }
 .toolbar__resolution {
   z-index: 4;
@@ -201,7 +273,7 @@ body {
   height: 20px;
   width: 11%;
   position: absolute;
-  left: 83%;
+  left: 78%;
 }
 .toolbar__more {
   z-index: 4;
@@ -211,7 +283,7 @@ body {
   height: 20px;
   width: 3%;
   position: absolute;
-  left: 95%;
+  left: 90%;
   cursor: pointer;
   transition: ease-in 0.15s;
 }
@@ -230,7 +302,7 @@ body {
   height: 50px;
   position: absolute;
   top: -180%;
-  left: 82%;
+  left: 78%;
   background-color: rgb(255, 255, 255);
   filter: drop-shadow(0px 0px 5px rgb(0, 0, 0));
   display: flex;
@@ -240,6 +312,28 @@ body {
 .toolbar__more-dropdown a:hover {
   color: rgb(0, 200, 0);
   transition: linear 0.15s;
+}
+.toolbar__expand {
+  z-index: 4;
+  box-sizing: border-box;
+  border: none;
+  background: transparent;
+  height: 20px;
+  width: 4%;
+  position: absolute;
+  left: 94%;
+  cursor: pointer;
+  transition: ease-in 0.15s;
+  scale: 1.1;
+}
+.toolbar__expand:hover {
+  scale: 1.4;
+  transition: ease-in 0.15s;
+  filter: drop-shadow(0px 0px 3px rgb(255, 255, 255)) invert(1);
+}
+.toolbar__expand:active {
+  color: rgb(0, 128, 255);
+  transition: linear 0s;
 }
 
 .hidden {
