--- a/03 ■► JS DOM/tasks/2023 → 03 → 07/01 ► music player.css
+++ b/03 ■► JS DOM/tasks/2023 → 03 → 07/01 ► music player.css
@@ -1,1 +1,143 @@
-/*# sourceMappingURL=01 ► music player.css.map */
+* body, * html, * h1, * h2, * h3, * h4, * h5, * h6, * ul, * p {
+  margin: 0;
+  padding: 0;
+}
+* li {
+  list-style: none;
+}
+* a {
+  text-decoration: none;
+}
+
+#background {
+  position: relative;
+  background: radial-gradient(rgb(255, 255, 0), rgb(255, 128, 0));
+  box-sizing: border-box;
+  border: 5px solid rgb(255, 64, 0);
+  width: 100%;
+  height: 750px;
+}
+#background .musicplayer {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 750px;
+  height: 400px;
+  border: 3px solid rgb(255, 64, 0);
+  border-radius: 10px;
+  background-color: white;
+}
+#background .musicplayer__title {
+  position: absolute;
+  top: 50%;
+  left: 71%;
+  transform: translate(-50%, -50%);
+  width: 400px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+}
+#background .musicplayer .musicplayer__timer {
+  position: absolute;
+  top: 62%;
+  left: 71%;
+  transform: translate(-50%, -50%);
+  width: 100px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+}
+#background .musicplayer__disc {
+  position: absolute;
+  top: 12%;
+  left: 2%;
+  width: 300px;
+  height: 300px;
+  box-sizing: border-box;
+  border: 2px solid rgb(255, 64, 0);
+  border-radius: 50%;
+  overflow: hidden;
+  filter: drop-shadow(0px 0px 8px rgb(0, 0, 0));
+}
+#background .musicplayer__disc img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 300px;
+  height: 100%;
+}
+#background .musicplayer__progressbar {
+  position: absolute;
+  top: 61%;
+  left: 60.7%;
+  transform: translate(-50%, -50%);
+  width: 360px;
+  height: 5px;
+  border: 1px solid rgb(48, 48, 48);
+  background-color: rgb(230, 230, 230);
+}
+#background .musicplayer__progressbar--passed {
+  position: relative;
+  width: 40%;
+  height: 100%;
+  box-sizing: border-box;
+  background-color: rgb(0, 0, 0);
+  filter: drop-shadow(0px 0px 5px rgb(64, 0, 255));
+}
+#background .musicplayer__toolbar {
+  position: relative;
+  top: 62%;
+  left: 48%;
+  border: 2px solid rgb(255, 64, 0);
+  border-radius: 8px;
+  background: linear-gradient(to right, rgb(255, 128, 0), rgb(255, 255, 0), rgb(255, 128, 0));
+  width: 360px;
+  height: 40px;
+}
+#background .musicplayer__toolbar .btn {
+  width: 36px;
+  height: 36px;
+  position: absolute;
+  top: 50%;
+  border: 1px solid rgb(255, 255, 255);
+  background: radial-gradient(rgb(128, 128, 128), rgb(48, 48, 48));
+  border-radius: 10px;
+  transform: translate(-50%, -50%);
+  cursor: pointer;
+  font-size: 18px;
+  font-weight: 700;
+  color: rgb(255, 255, 255);
+  transition: linear 0.2s;
+}
+#background .musicplayer__toolbar .btn:hover {
+  filter: drop-shadow(0px 0px 5px rgb(0, 0, 0)) invert(1);
+  scale: 1.02;
+  transition: linear 0.2s;
+}
+#background .musicplayer__toolbar .btn:active {
+  background: rgb(255, 255, 255);
+  color: rgb(0, 0, 0);
+  border: 1px solid rgb(0, 0, 0);
+  filter: invert(1);
+}
+#background .musicplayer__toolbar--prevsong {
+  left: 20%;
+}
+#background .musicplayer__toolbar--playpause {
+  left: 50%;
+}
+#background .musicplayer__toolbar--nextsong {
+  left: 80%;
+}
+
+@keyframes rotateimage {
+  0% {
+    rotate: 0deg;
+  }
+  100% {
+    rotate: 360deg;
+  }
+}/*# sourceMappingURL=01 ► music player.css.map */
