--- a/03 ■► JS DOM/tasks/2023 → 03 → 08/01 ► form sign in up.css
+++ b/03 ■► JS DOM/tasks/2023 → 03 → 08/01 ► form sign in up.css
@@ -1,1 +1,10 @@
-/*# sourceMappingURL=01 ► form sign in up.css.map */
+* body, * html, * h1, * h2, * h3, * h4, * h5, * h6, * ul, * p {
+  margin: 0;
+  padding: 0;
+}
+* li {
+  list-style: none;
+}
+* a {
+  text-decoration: none;
+}/*# sourceMappingURL=01 ► form sign in up.css.map */
