--- a/03 ■► JS DOM/tasks/2023 → 03 → 07/01 ► music player.css
+++ b/03 ■► JS DOM/tasks/2023 → 03 → 07/01 ► music player.css
@@ -11,11 +11,12 @@
 
 #background {
   position: relative;
-  background: radial-gradient(rgb(255, 255, 0), rgb(255, 128, 0));
+  background: radial-gradient(circle at 50% 50%, rgb(255, 255, 0), rgb(255, 128, 0));
   box-sizing: border-box;
   border: 5px solid rgb(255, 64, 0);
   width: 100%;
   height: 750px;
+  background-position-x: 1%;
 }
 #background .musicplayer {
   position: absolute;
@@ -30,26 +31,28 @@
 }
 #background .musicplayer__title {
   position: absolute;
-  top: 50%;
-  left: 71%;
+  top: 36%;
+  left: 73%;
   transform: translate(-50%, -50%);
-  width: 400px;
+  width: 380px;
   height: 40px;
   display: flex;
   align-items: center;
   font-size: 14px;
+  font-weight: 600;
 }
 #background .musicplayer .musicplayer__timer {
   position: absolute;
-  top: 62%;
-  left: 71%;
+  top: 54%;
+  left: 73%;
   transform: translate(-50%, -50%);
   width: 100px;
-  height: 40px;
+  height: 30px;
   display: flex;
   align-items: center;
   justify-content: center;
   font-size: 14px;
+  font-weight: 600;
 }
 #background .musicplayer__disc {
   position: absolute;
@@ -71,8 +74,8 @@
 }
 #background .musicplayer__progressbar {
   position: absolute;
-  top: 61%;
-  left: 60.7%;
+  top: 60%;
+  left: 72.3%;
   transform: translate(-50%, -50%);
   width: 360px;
   height: 5px;
@@ -140,4 +143,7 @@
   100% {
     rotate: 360deg;
   }
+}
+.play {
+  animation: rotateimage 60s linear 0s infinite;
 }/*# sourceMappingURL=01 ► music player.css.map */
