--- a/03 ■► JS DOM/tasks/2023 → 03 → 07/01 ► music player.scss
+++ b/03 ■► JS DOM/tasks/2023 → 03 → 07/01 ► music player.scss
@@ -13,12 +13,15 @@
 }
 // BACKGROUND RADIAL GRADIENT COLOR
 #background {
+    $bg_pointer_x: 50%;
+    $bg_pointer_y: 50%;
     position: relative;
-    background: radial-gradient(rgb(255,255,0),rgb(255,128,0));
+    background: radial-gradient(circle at 50% 50%, rgb(255,255,0),rgb(255,128,0));
     box-sizing: border-box;
     border: 5px solid rgb(255,64,0);
     width: 100%;
     height: 750px;
+    background-position-x: 1%;
     // MUSIC PLAYER CONTAINER
     .musicplayer {
         position: absolute;
@@ -35,29 +38,31 @@
             // border: 1px solid red;
             // background-color: white;
             position: absolute;
-            top: 50%;
-            left: 71%;
+            top: 36%;
+            left: 73%;
             transform: translate(-50%, -50%);
-            width: 400px;
+            width: 380px;
             height: 40px;
             display: flex;
             align-items: center;
             font-size: 14px;
+            font-weight: 600;
         }
         // TIMER OF MUSIC
         .musicplayer__timer {
             // border: 1px solid red;
             // background-color: white;
             position: absolute;
-            top: 62%;
-            left: 71%;
+            top: 54%;
+            left: 73%;
             transform: translate(-50%, -50%);
             width: 100px;
-            height: 40px;
+            height: 30px;
             display: flex;
             align-items: center;
             justify-content: center;
             font-size: 14px;
+            font-weight: 600;
         }
         // COVER IMAGE
         &__disc {
@@ -71,7 +76,6 @@
             border-radius: 50%;
             overflow: hidden;
             filter: drop-shadow(0px 0px 8px rgba(0,0,0,1.0));
-            // animation: rotateimage 3s linear 0s infinite;
             img {
                 object-fit: cover;
                 width: 300px;
@@ -81,8 +85,8 @@
         // PROGRESS BAR
         &__progressbar {
             position: absolute;
-            top: 61%;
-            left: 60.7%;
+            top: 60%;
+            left: 72.3%;
             transform: translate(-50%, -50%);
             width: 360px;
             height: 5px;
@@ -154,4 +158,8 @@
 @keyframes rotateimage {
     0% {rotate: 0deg;}
     100% {rotate: 360deg;}
+}
+// PLAY CLASS
+.play {
+    animation: rotateimage 60s linear 0s infinite;
 }
