--- a/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/frondalize-homepage.css
+++ b/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/frondalize-homepage.css
@@ -26,7 +26,7 @@
   border: 1px solid maroon;
   background-color: white;
   box-sizing: border-box;
-  width: 80%;
+  width: 1150px;
   height: 60px;
   display: flex;
   justify-content: center;
@@ -174,12 +174,13 @@
   border: 1px solid gray;
   background-color: white;
   box-sizing: border-box;
-  width: 80%;
+  width: 1150px;
   height: 40px;
   position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-wrap: wrap;
 }
 #nav .nav__list {
   display: flex;
@@ -195,6 +196,22 @@
   box-sizing: border-box;
   height: 100%;
   padding: 0px 20px;
+}
+#nav .nav__dropdown-overall--cols {
+  display: flex;
+  border: 1px solid red;
+  font-size: 14px;
+  width: 30%;
+  height: 50%;
+}
+#nav .nav__dropdown-overall--cols_header {
+  text-align: center;
+}
+#nav .nav__dropdown-overall--cols_lists {
+  margin-left: 10px;
+}
+#nav .nav__dropdown-overall--cols_lists:not(:last-of-type) {
+  margin-bottom: 5px;
 }
 #nav .nav__dropdown-woman {
   position: absolute;
@@ -302,7 +319,7 @@
 }
 #footer .footer {
   box-sizing: border-box;
-  width: 80%;
+  width: 1150px;
   height: 220px;
   border: 1px solid red;
   background-color: white;
@@ -340,7 +357,7 @@
 }
 #footer .bottom {
   box-sizing: border-box;
-  width: 80%;
+  width: 1150px;
   height: 30px;
   border: 1px solid blueviolet;
   background-color: white;
