--- a/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/frondalize-homepage.scss
+++ b/03 ■► JS DOM/CODERS JS project (02-17-2023 to 03-10-2023)/frondalize-homepage.scss
@@ -62,7 +62,7 @@
         border: 1px solid maroon;
         background-color: white;
         box-sizing: border-box;
-        width: 80%;
+        width: 1150px;
         height: 60px;
         display: flex;
         justify-content: center;
@@ -203,10 +203,11 @@
         border: 1px solid gray;
         background-color: white;
         box-sizing: border-box;
-        width: 80%;
+        width: 1150px;
         height: 40px;
         position: relative;
         @include df-center;
+        flex-wrap: wrap;
         &__list {
             display: flex;
             align-items: center;
@@ -220,6 +221,22 @@
                 box-sizing: border-box;
                 height: 100%;
                 padding: 0px 20px;
+            }
+        }
+        &__dropdown-overall--cols{
+            display: flex;
+            border: 1px solid red;
+            font-size: 14px;
+            width: 30%;
+            height: 50%;
+            &_header {
+                text-align: center;
+            }
+            &_lists {
+                margin-left: 10px;
+                &:not(:last-of-type) {
+                    margin-bottom: 5px;
+                }
             }
         }
         &__dropdown-woman {
@@ -339,7 +356,7 @@
     background-color: orange;
     .footer {
         box-sizing: border-box;
-        width: 80%;
+        width: 1150px;
         height: 220px;
         border: 1px solid red;
         background-color: white;
@@ -390,7 +407,8 @@
     }
     .bottom {
         box-sizing: border-box;
-        width: 80%;
+        // width: 80%;
+        width: 1150px;
         height: 30px;
         border: 1px solid blueviolet;
         background-color: white;
