update March 11, 2023 at 18:08

--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.css
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.css
@@ -1,1 +1,21 @@
-/*# sourceMappingURL=Ploranza.css.map */
+* {
+  font-family: "Josefin Sans", sans-serif;
+}
+* html, * body, * h1, * h2, * h3, * h4, * h5, * h6, * p, * ul {
+  margin: 0;
+  padding: 0;
+}
+* li {
+  list-style: none;
+}
+* a {
+  text-decoration: none;
+}
+
+.hidden {
+  display: none;
+}
+
+.checked {
+  transition: ease-in-out 0.3s;
+}/*# sourceMappingURL=Ploranza.css.map */
