--- a/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.css
+++ b/03 ■► JS DOM/e-Commerce website project (03-10-2023 to 03-12-2023)/Ploranza.css
@@ -10,6 +10,14 @@
 }
 * a {
   text-decoration: none;
+  color: rgb(0, 0, 0);
+  transition: ease-in-out 0.2s;
+}
+* a:hover {
+  color: rgb(0, 255, 128);
+}
+* button {
+  cursor: pointer;
 }
 
 .hidden {
@@ -17,5 +25,5 @@
 }
 
 .checked {
-  transition: ease-in-out 0.3s;
+  transition: linear 0.35s;
 }/*# sourceMappingURL=Ploranza.css.map */
